--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,39 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image: url(/images/pawprints.jpg);
+	padding: 50px;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	background-image: url(/images/pawprints.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	font-family: 'Buda', cursive;
 }
 
 a {
-  color: #00B7FF;
+	color: #00B7FF;
 }
 
 .topBanner {
-	background-color: blue;
+	background-color: white;
+	width: 70%;
+	text-align: center;
+	opacity: .6;
+	border-radius: 10px;
+	padding: 5px;
+	border: solid #926239;
+		
+}
+
+#mainContainer {
+	font-size: 24px;
+	padding: 5px;
+	background-color: white;
+	opacity: .6;
+	border-radius: 10px;
+	border: solid #926239;
 	
+}
+
+#confusedDog {
+	horizontal-align: left;
+	width: 150px;
+	height: 100px;
 }
