--- a/views/index.jade
+++ b/views/index.jade
@@ -3,19 +3,18 @@ extends layout
 block content
 	h1.topBanner #{title}
 
-	.row.
+	.row#mainContainer
 
-	p Please use the links below to find more information.
+		p Please use the links below to find more information.
 
-	a(href=" ") Locator
-	p Search and view available foster homes in Colorado, short term fosters near out of state shelters, and transport schedules.
+		a(href=" ") Locator
+		p Search and view available foster homes in Colorado, short term fosters near out of state shelters, and transport schedules.
 
-	a(href=" ") Dogs
-	p Information about each dog in the rescue's care at this time, such as status, current foster home, vet records (in PDF format), biography, and photo. A new dog can also be added here.
+		a(href=" ") Dogs
+		p Information about each dog in the rescue's care at this time, such as status, current foster home, vet records (in PDF format), biography, and photo. A new dog can also be added here.
 
-	a(href=" ") Resources
-	p Forms needed for any adoption or homecheck.
+		a(href=" ") Resources
+		p Forms needed for any adoption or homecheck.
+	
 
-
-	p Don't see what you need here?  Please email <a>rescue@westerndogs.org</a> with additional questions.  Please allow 24 hours for a response.
-
+		p <img id='confusedDog' src=/images/confusedpup.jpeg> Don't see what you need here?  Please email <a>rescue@westerndogs.org</a> with additional questions. 
