--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='http://fonts.googleapis.com/css?family=Buda:300' rel='stylesheet' type='text/css')
+
   body
     block content
