--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
 		p Information about each dog in the rescue's care at this time, such as status, current foster home, vet records (in PDF format), biography, and photo. A new dog can also be added here.
 
 		a(href=" ") Resources
-		p Forms needed for any adoption or homecheck.
+		p Forms needed for any adoption or homecheck, and a volunteer handbook.
 	
 
 		p <img id='confusedDog' src=/images/confusedpup.jpeg> Don't see what you need here?  Please email <a>rescue@westerndogs.org</a> with additional questions. 
