--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,9 @@
 extends layout
 
 block content
-	h1.topBanner #{title}
+	h1#indexBanner #{title}
 
-	.row#mainContainer
+	.row.mainContainer
 
 		p Please use the links below to find more information.
 
@@ -16,5 +16,4 @@ block content
 		a(href=" ") Resources
 		p Forms needed for any adoption or homecheck, and a volunteer handbook.
 	
-
-		p <img id='confusedDog' src=/images/confusedpup.jpeg> Don't see what you need here?  Please email <a>rescue@westerndogs.org</a> with additional questions. 
+		p <img id='confusedDog' src=/images/confusedpup.jpeg> Don't see what you're looking for?  Please email <a>rescue@westerndogs.org</a> with additional questions. 
