--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,7 @@ a {
 	color: #00B7FF;
 }
 
-.topBanner {
+#indexBanner {
 	background-color: white;
 	width: 70%;
 	text-align: center;
@@ -22,7 +22,7 @@ a {
 		
 }
 
-#mainContainer {
+.mainContainer {
 	font-size: 24px;
 	padding: 5px;
 	background-color: white;
@@ -36,4 +36,15 @@ a {
 	horizontal-align: left;
 	width: 150px;
 	height: 100px;
+}
+
+#resourcesBanner {
+	background-color: white;
+	opacity: .6;
+	border-radius: 10px;
+	border: solid #926239;
+	width: 20%;
+	text-align: center;
+	font-size: 44px;
+	padding: 5px;
 }
