Fixed file path

--- a/views/resources.jade
+++ b/views/resources.jade
@@ -4,7 +4,7 @@ block content
 	h1#resourcesBanner #{title}
 
 	.row.mainContainer
-		p Please click on any of the following to view (will open in PDF format).
+		p Please click on any of the following to view.
 
 			div
 				a(href="/resourceDocs/ADOPTIONFORMS.pdf") Adoption forms 
@@ -13,5 +13,5 @@ block content
 				a(href="/resourceDocs/HOMECHECKFORMS.pdf") Homecheck forms
 				p Includes a checklist of items to be inspected at a potential adopter's residence.  
 			div
-				a(href="/resourceDocs/VOLUNTEERHANDBOOK.jpeg") Volunteer handbook
+				a(href="/resourceDocs/VOLUNTEERHANDBOOK.pdf") Volunteer handbook
 				p Includes information such as general facts about Western Dogs Rescue, guidelines for foster homes, and the adoption process.
