--- a/views/index.jade
+++ b/views/index.jade
@@ -3,8 +3,6 @@ extends layout
 block content
 	h1#indexBanner #{title}
 
-	.row.mainContainer
-
 		p Please use the links below to find more information.
 
 		a(href=" ") Locator
@@ -14,6 +12,6 @@ block content
 		p Information about each dog in the rescue's care at this time, such as status, current foster home, vet records (in PDF format), biography, and photo. A new dog can also be added here.
 
 		a(href=" ") Resources
-		p Forms needed for any adoption or homecheck, and a volunteer handbook.
+		p Forms needed for any adoption or homecheck, and the volunteer handbook.
 	
 		p <img id='confusedDog' src=/images/confusedpup.jpeg> Don't see what you're looking for?  Please email <a>rescue@westerndogs.org</a> with additional questions. 
