--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,17 @@
 extends layout
 
 block content
-  h1= title
+
+    div
+    
+    h1#loginBanner #{title} 
+    p#loginBox Volunteer login
+
+    #imageContainer
+        <img class='frontImage' src=/images/mandd.jpg>
+        
+        <img class='frontImage' src=/images/adog.jpg>
+        
+        <img class='frontImage' src=/images/zbike.jpg>
+
+    
