--- a/views/resources.jade
+++ b/views/resources.jade
@@ -13,5 +13,5 @@ block content
 				a(href="/resourceDocs/HOMECHECKFORMS.pdf") Homecheck forms
 				p Includes a checklist of items to be inspected at a potential adopter's residence.  
 			div
-				a(href="/resourceDocs/VOLUNTEERHANDBOOK.pdf") Volunteer handbook
+				a(href="/resourceDocs/VOLUNTEERHANDBOOK.pdf" target='blank') Volunteer handbook
 				p Includes information such as general facts about Western Dogs Rescue, guidelines for foster homes, and the adoption process.
