--- a/views/login.jade
+++ b/views/login.jade
@@ -2,16 +2,20 @@ extends layout
 
 block content
 
-    div
-    
-    h1#loginBanner #{title} 
-    p#loginBox Volunteer login
+	div
+	
+	h1.bigBanner #{title} 
+	#loginBox Volunteer login 
+		p Username: <input></input>
+		p Password: <input></input>
+		button#loginButton Sign in
 
-    #imageContainer
-        <img class='frontImage' src=/images/mandd.jpg>
-        
-        <img class='frontImage' src=/images/adog.jpg>
-        
-        <img class='frontImage' src=/images/zbike.jpg>
 
-    
+	#imageContainer
+		<img class='frontImage' src=/images/mandd.jpg>
+		
+		<img class='frontImage' src=/images/adog.jpg>
+		
+		<img class='frontImage' src=/images/zbike.jpg>
+
+	
