--- a/views/resources.jade
+++ b/views/resources.jade
@@ -1,17 +1,21 @@
 extends layout
 
 block content
-	h1#resourcesBanner #{title}
+	h1.bigBanner #{title}
+	h1#resourcesBanner #{title2}
 
 	.row.mainContainer
-		p Please click on any of the following to view.
+		p Please click on any of the following to view (all will open as a PDF in a new window).
 
 			div
-				a(href="/resourceDocs/ADOPTIONFORMS.pdf") Adoption forms 
+				a(href="/resourceDocs/ADOPTIONFORMS.pdf" target='blank') Adoption forms 
 				p Everything you need to facilitate an adoption of a Western Dog Rescue dog.  
 			div
-				a(href="/resourceDocs/HOMECHECKFORMS.pdf") Homecheck forms
+				a(href="/resourceDocs/HOMECHECKFORMS.pdf" target='blank') Homecheck forms
 				p Includes a checklist of items to be inspected at a potential adopter's residence.  
 			div
 				a(href="/resourceDocs/VOLUNTEERHANDBOOK.pdf" target='blank') Volunteer handbook
 				p Includes information such as general facts about Western Dogs Rescue, guidelines for foster homes, and the adoption process.
+			div		
+				a(href="/resourceDocs/FAQS.pdf" target='blank') Frequently asked questions
+				p A list of questions commonly asked about Western Dogs.  
