--- a/views/resources.jade
+++ b/views/resources.jade
@@ -18,4 +18,4 @@ block content
 				p Includes information such as general facts about Western Dogs Rescue, guidelines for foster homes, and the adoption process.
 			div		
 				a(href="/resourceDocs/FAQS.pdf" target='blank') Frequently asked questions
-				p A list of questions commonly asked about Western Dogs.  
+				p A list of questions commonly asked about the rescue.  
