--- a/views/resources.jade
+++ b/views/resources.jade
@@ -5,7 +5,7 @@ block content
 	h1#resourcesBanner #{title2}
 
 	.row.mainContainer
-		p Please click on any of the following to view (all will open as a PDF in a new window).
+		p Please click on any of the following to view (all will open in a new window).
 
 			div
 				a(href="/resourceDocs/ADOPTIONFORMS.pdf" target='blank') Adoption forms 
