--- a/views/index.jade
+++ b/views/index.jade
@@ -7,13 +7,13 @@ block content
 	.mainContainer
 		p Please use the links below to find more information.
 
-		a(href=" ") Locator
+		a(href="locatorDirection") Locator
 		p Search and view available foster homes in Colorado, short term fosters near out of state shelters, and transport schedules.
 
-		a(href=" ") Dogs
+		a(href="dogsDirection") Dogs
 		p Information about each dog in the rescue's care at this time, such as status, current foster home, vet records (in PDF format), biography, and photo. A new dog can also be added here.
 
-		a(href=" ") Resources
+		a(href="resourcesDirection") Resources
 		p Forms needed for any adoption or homecheck, and the volunteer handbook.
 
 		p <img id='confusedDog' src=/images/confusedpup.jpeg> Don't see what you need?  Please email <a>rescue@westerndogs.org</a> with additional questions. 
