--- a/views/resources.jade
+++ b/views/resources.jade
@@ -19,3 +19,9 @@ block content
 			div		
 				a(href="/resourceDocs/FAQS.pdf" target='blank') Frequently asked questions
 				p A list of questions commonly asked about the rescue.  
+
+	.navigateBar Navigate to:
+		span.navigateOption
+			a(href="/locatorDirection") Locator 
+		span
+			a(href="/dogsDirection") Dogs
