--- a/views/currentDogs.jade
+++ b/views/currentDogs.jade
@@ -5,9 +5,12 @@ block content
 	h1#resourcesBanner #{title2}
 
 	for dog in dogs
-		.mainContainer
-		p Name: #{dog.name}, #{dog.age} #{dog.sex} 
-		p About me: #{dog.bio}
-		p Foster: #{dog.foster}
-		p PHOTO HERE
+		.dogListContainer
+			span
+				img(class='dogImage' src='http://assets.classivox.com/vixle_images/-1615655849-original.jpg')
+			span.dogInfo
+				p.dogListHeader #{dog.name}, #{dog.age} #{dog.sex} 
+				p About me: #{dog.bio}
+				p Foster: #{dog.foster}
+		
 
