Form to add dogs to DB

--- a/views/locate.jade
+++ b/views/locate.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
+	.navigateBar Navigate to:
+		span.navigateOption
+			a(href="/ResourcesDirection") Resources
+		span
+			a(href="/dogsDirection") Dogs
 	h1.bigBanner #{title}
 	h1#resourcesBanner #{title2}
