--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,8 +30,7 @@ a {
 .mainContainer {
 	font-size: 24px;
 	padding: 10px;
-	background-color: white;
-	opacity: .6;
+	background-color: rgba(255, 255, 255, 0.6);
 	border-radius: 10px;
 	border: solid #926239;
 	
@@ -103,7 +102,7 @@ a {
 }
 
 .navigateBar {
-	width: 20%;
+	width: 25%;
 	margin-left: 75%;
 	margin-top: 10px;
 	text-align: center;
@@ -124,7 +123,7 @@ a {
 	font-size: 24px;
 	padding: 10px;
 	background-color: white;
-	opacity: .6;
+	background-color: rgba(255, 255, 255, 0.6);
 	border-radius: 10px;
 	border: solid #926239;
 	width: 100%;
@@ -156,3 +155,33 @@ a {
 .sectionTitle {
 	text-decoration: underline;
 }
+
+.addDog {
+	border-radius: 10px;
+	border: solid #926239;
+	margin-left: 80%;
+	font-size: 24px;
+	text-align: center;
+	background-color: #99CDC9;
+	opacity: .8;
+	padding: 1%;
+	margin-bottom: 1%;
+}
+
+.newDogContainer {
+	font-size: 24px;
+	padding: 10px;
+	background-color: white;
+	background-color: rgba(255, 255, 255, 0.6);
+	border-radius: 10px;
+	border: solid #926239;
+	margin-right: 20%;
+	margin-left: 20%;
+	
+}
+
+.btn {
+	margin-left: 30%;
+	background-color: #A4D3EE;
+	width: 25%;
+	}
