--- a/views/addDogs.jade
+++ b/views/addDogs.jade
@@ -11,7 +11,7 @@ block content
 	h1#resourcesBanner #{title2} 
 
 	.newDogContainer
-		form(class= "form-horizontal" role="form")
+		form(class= "form-horizontal" role="form" action="/addDogAction")
 			div.form-group
 				label(class= "col-sm-2 control-label" for="name") Name:
 				.col-sm-10
