--- a/views/addDogs.jade
+++ b/views/addDogs.jade
@@ -35,11 +35,11 @@ block content
 			div.form-group
 				label(class= "col-sm-4 control-label" for="name") Biography:
 				.col-sm-6
-					textarea(type="name" class="form-control" name="biography")
+					input(type="name" class="form-control" name="biography")
 			div.form-group
 				label(class= "col-sm-4 control-label" for="name") Image(URL):
 				.col-sm-6
-					input(type="name" class="form-control" name="image")
+					input(type="name" class="form-control" name="photo")
 				.form-group
 					.col-sm-offset-2.col-sm-10
 						button(type="submit" class="btn btn-default") Submit
