--- a/views/locate.jade
+++ b/views/locate.jade
@@ -8,3 +8,8 @@ block content
 			a(href="/dogsDirection") Dogs
 	h1.bigBanner #{title}
 	h1#resourcesBanner #{title2}
+
+	.mainContainer
+		p Western Dogs Rescue has foster families in Kansas, New Mexico, and Texas, all of whom can hold dogs until a transport to Colorado is available.  Once a dog has arrived in Colorado, they are placed with a foster home there.  
+		p.successNavigateBar To search short-term foster homes located outside of Colorado, click <a>here</a>.
+		p.successNavigateBar If you are seeking an open foster home for a dog currently located in Colorado, click <a>here</a>.
