--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,6 +36,22 @@ a {
 	
 }
 
+.indexSelector {
+	display: inline-block;
+	width: 30%;
+	vertical-align: top;
+	border-radius: 15px;
+	border: solid #f5f5dc;
+	margin-left: 15px;
+	margin-right: 15px;
+	color: #f5f5dc;
+	background-color: #97694F;
+	padding: 2%;
+	opacity: .7;
+	margin-bottom: 20px;
+
+}
+
 .successMainContainer {
 	margin-left: 20%;
 	margin-right: 20%;
@@ -52,7 +68,7 @@ a {
 	width: 150px;
 	border-radius: 50px;
 	height: 100px;
-	border: solid #926239
+	border: solid #926239; 
 
 }
 
@@ -127,10 +143,9 @@ a {
 }
 
 .successNavigateBar {
-	width: 75%;
+	display: inline-block;
 	margin-top: 10px;
-	margin-right: auto;
-	margin-left: auto;
+	width: 50%;
 	text-align: center;
 	font-size: 24px;
 	background-color: #97694F;
@@ -138,6 +153,7 @@ a {
 	opacity: .7;
 	border-radius: 10px;
 	border: solid #FAF0E6;
+	color: #f5f5dc;
 	
 }
 
@@ -218,3 +234,23 @@ img {
 	width: 25%;
 	}
 
+.indexIcon {
+	width: 100px;
+	height: 100px;
+	margin-right: 50%;
+	margin-left: 25%;
+	background-color: #f5f5dc;
+	border-radius: 10px; 
+	border: solid black;
+	padding: 5px;
+	margin-bottom: 2%;
+
+}
+ .indexButton {
+ 	color: black;
+ 	text-align: center;
+ 	margin-left: auto;
+ 	margin-right: auto;
+ 	background-color: #A4D3EE;
+ 	border-radius: 10px;
+ }
