--- a/views/index.jade
+++ b/views/index.jade
@@ -5,13 +5,18 @@ block content
 	h1#indexBanner #{title2}
 
 	.mainContainer
-		a(href="locatorDirection") Locator
-		p Search and view available foster homes in Colorado, short term fosters near out of state shelters, and transport schedules.
 
-		a(href="dogsDirection") Dogs
-		p Information about each dog in the rescue's care at this time, such as status, current foster home, vet records (in PDF format), biography, and photo. A new dog can also be added here.
+		.indexSelector
+			img(class= 'indexIcon' src='/images/locatorIcon.png')
+			p Search and view available foster homes in Colorado, short term fosters near out of state shelters, and transport schedules.
+			.indexButton(href="locatorDirection") Locate!
 
-		a(href="resourcesDirection") Resources
-		p Forms needed for any adoption or homecheck, and the volunteer handbook.
+		.indexSelector
+			a(href="dogsDirection") Dogs
+			p Information about each dog in the rescue's care at this time, such as status, current foster home, vet records (in PDF format), biography, and photo. A new dog can also be added here.
+
+		.indexSelector
+			a(href="resourcesDirection") Resources
+			p Forms needed for any adoption or homecheck, and the volunteer handbook.
 
 		p <img id='confusedDog' src=/images/confusedpup.jpeg> Don't see what you need?  Please email <a>rescue@westerndogs.org</a> with additional questions. 
