--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,6 +121,7 @@ a {
 #loginButton {
 	background-color: #A4D3EE;
 	width: 35%;
+	border-radius: 10px;
 }
 
 #loginButton :hover {
@@ -246,11 +247,12 @@ img {
 	margin-bottom: 2%;
 
 }
- .indexButton {
+ .indexLink {
  	color: black;
  	text-align: center;
- 	margin-left: auto;
- 	margin-right: auto;
  	background-color: #A4D3EE;
  	border-radius: 10px;
+ 	border: solid #d3d3d3;
+ 	padding: 5px;
+ 	
  }
