Added to login pg

--- a/views/login.jade
+++ b/views/login.jade
@@ -9,7 +9,9 @@ block content
 		p Username: <input></input>
 		p Password: <input></input>
 		button#loginButton Sign in
-
+		div.loginHelpBox
+			p Forgot password or username? Click <a>here</a> 
+			p New volunteer? Register <a>here</a>
 
 	#imageContainer
 		<img class='frontImage' src=/images/mandd.jpg>
