--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,10 @@ a {
 	color: #00B7FF;
 }
 
-
+.loginHelpBox {
+	font-size: 24px;
+	margin-top: 5%;
+}
 #indexBanner {
 	background-color: white;
 	font-size: 48px;
@@ -239,7 +242,7 @@ img {
 	width: 100px;
 	height: 100px;
 	margin-right: 50%;
-	margin-left: 25%;
+	margin-left: 30%;
 	background-color: #f5f5dc;
 	border-radius: 10px; 
 	border: solid black;
