--- a/views/locate.jade
+++ b/views/locate.jade
@@ -10,5 +10,5 @@ block content
 	h1#resourcesBanner #{title2}
 
 	.mainContainer
-		div.successNavigateBar To search short-term foster homes located in Texas, New Mexico and Kansas, click <a>here</a>.
-		div.successNavigateBar If you are seeking an open foster home for a dog currently located in Colorado, click <a>here</a>.
+		div.locateNavigateBar To search short-term foster homes located in Texas, New Mexico and Kansas, click <a>here</a>.
+		div.locateNavigateBar If you are seeking an open foster home for a dog currently located in Colorado, click <a>here</a>.
