--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -259,3 +259,20 @@ img {
  	padding: 5px;
  	
  }
+
+ .locateNavigateBar {
+	display: inline-block;
+	margin-top: 10px;
+	margin-right: 1%;
+	margin-left: 3%;
+	width: 45%;
+	text-align: center;
+	font-size: 24px;
+	background-color: #97694F;
+	padding: 15px;
+	opacity: .7;
+	border-radius: 10px;
+	border: solid #FAF0E6;
+	color: #f5f5dc;
+	
+}
