--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,11 +36,13 @@ a {
 	background-color: rgba(255, 255, 255, 0.6);
 	border-radius: 10px;
 	border: solid #926239;
+	text-align: center;
 	
 }
 
 .indexSelector {
 	display: inline-block;
+	min-height: 300px;
 	width: 30%;
 	vertical-align: top;
 	border-radius: 15px;
@@ -71,7 +73,8 @@ a {
 	width: 150px;
 	border-radius: 50px;
 	height: 100px;
-	border: solid #926239; 
+	border: solid #926239;
+	vertical-align: middle; 
 
 }
 
