--- a/views/index.jade
+++ b/views/index.jade
@@ -8,12 +8,12 @@ block content
 
 		.indexSelector
 			img(class = 'indexIcon' src='/images/locatorIcon.png')
-			p Search and view available foster homes in Colorado, short term fosters near out of state shelters, and transport schedules.
+			p Search and view available foster homes in Colorado.
 			a.indexLink(href="locatorDirection") Locate!
 
 		.indexSelector
 			img(class ="indexIcon" src='/images/indexDogIcon.png')
-			p Information about each dog in the rescue's care at this time, such as status, current foster home, vet records (in PDF format), biography, and photo. A new dog can also be added here.
+			p Information about each dog in the rescue's care at this time.
 			a.indexLink(type= "button" href="dogsDirection") See the dogs!
 
 		.indexSelector
