--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,3 +8,6 @@ html
 
   body
     block content
+
+    script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js')
+    script(src='/javascripts/main.js')
