--- a/views/locate.jade
+++ b/views/locate.jade
@@ -8,7 +8,7 @@ block content
 			a(href="/dogsDirection") Dogs
 	h1.bigBanner #{title}
 	h1#resourcesBanner #{title2}
-	button(id="findButton" type="submit") Find
+	button(id="findButton" type="button") Find
 
 	.mainContainer
 		//- div.locateNavigateBar To search short-term foster homes located in Texas, New Mexico and Kansas, click <a>here</a>.
