--- a/views/login.jade
+++ b/views/login.jade
@@ -8,7 +8,7 @@ block content
 	#loginBox Volunteer login 
 		p Username: <input></input>
 		p Password: <input></input>
-		button#loginButton Sign in
+		button#loginButton(type="button") Sign in
 		div.loginHelpBox
 			p Forgot password or username? Click <a>here</a> 
 			p New volunteer? Register <a>here</a>
