--- a/views/locate.jade
+++ b/views/locate.jade
@@ -9,6 +9,7 @@ block content
 	h1.bigBanner #{title}
 	h1#resourcesBanner #{title2}
 	button(id="findButton" type="button") Find
+	.attach
 
 	.mainContainer
 		//- div.locateNavigateBar To search short-term foster homes located in Texas, New Mexico and Kansas, click <a>here</a>.
