--- a/views/index.jade
+++ b/views/index.jade
@@ -8,12 +8,12 @@ block content
 
 		.indexSelector
 			img(class = 'indexIcon' src='/images/locatorIcon.png')
-			p Search and view available foster homes in Colorado.
+			p Search and view available foster homes in Colorado and New Mexico.
 			a.indexLink(href="locatorDirection") Locate!
 
 		.indexSelector
 			img(class ="indexIcon" src='/images/indexDogIcon.png')
-			p Information about each dog in the rescue's care at this time.
+			p Information about each dog in the rescue's care, and an option to add a dog.
 			a.indexLink(type= "button" href="dogsDirection") See the dogs!
 
 		.indexSelector
