--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,10 +131,6 @@ a {
 	border-radius: 10px;
 }
 
-#loginButton :hover {
-	background-color: orange;
-}
-
 .navigateBar {
 	width: 40%;
 	color: #f5f5dc;
@@ -260,14 +256,12 @@ img {
  	border-radius: 10px;
  	border: solid #d3d3d3;
  	padding: 5px;
- 	
  }
 
  .locateNavigateBar {
 	display: inline-block;
 	margin-top: 10px;
-	margin-right: 1%;
-	margin-left: 3%;
+	margin-bottom: 1%;
 	width: 45%;
 	text-align: center;
 	font-size: 24px;
@@ -278,4 +272,37 @@ img {
 	border: solid #FAF0E6;
 	color: #f5f5dc;
 	
+}
+
+.fosterContainer {
+	font-size: 24px;
+	padding: 10px;
+	background-color: rgba(255, 255, 255, 0.6);
+	border-radius: 10px;
+	border: solid #926239;
+	margin-top: 2%;
+	margin-bottom: 2%;
+	margin-left: 18%;
+	margin-right: 18%;
+	text-align: center;
+
+} 
+
+#findButton {
+	background-color: #A4D3EE;
+	width: 35%;
+	border-radius: 10px;
+
+}
+
+.searchIcon {
+	width: 30%;
+	border-radius: 10px; 
+	border: solid black;
+	margin-bottom: 2%;
+	text-align: center;
+}
+
+.center {
+	text-align: center;
 }
