--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
 
 		.indexSelector
 			img(class = 'indexIcon' src='/images/locatorIcon.png')
-			p Search and view available foster homes in Colorado and New Mexico.
+			p Search open foster homes in the state of Colorado, and locate them on a map.
 			a.indexLink(href="locatorDirection") Locate!
 
 		.indexSelector
