--- a/views/locate.jade
+++ b/views/locate.jade
@@ -13,7 +13,7 @@ block content
 			img(class= "searchIcon" src='/images/ColoradoFlag.png')
 			p Select the button below to show contact information and relative locations for foster homes in Colorado.
 			div
-				button(id="findButton" type="button") Search!</a>
+				button(id="findButton" class= "linkColor" type="button") Search!</a>
 	
 	.fosterContainer
 		.attach
