Minor change to addSuccess.jade

--- a/views/addSuccess.jade
+++ b/views/addSuccess.jade
@@ -5,7 +5,7 @@ block content
 	h1.bigBanner #{title} 
 
 	.successMainContainer
-		p Success!  This dog has been added.    
+		p Success!  This dog has now been added.    
 		p 
 		.successNavigateBar Navigate to:
 			span.navigateOption
