--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@ body {
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
-	font-family: 'Buda', cursive;
+	/* font-family: 'Buda', cursive; */;
 }
 
 a {
