--- a/views/index.jade
+++ b/views/index.jade
@@ -21,4 +21,4 @@ block content
 			p Forms needed for any adoption or homecheck, and the volunteer handbook.
 			a.indexLink(href="resourcesDirection") View resources
 
-		p <img id='confusedDog' src='/images/confusedPup.jpg'> Don't see what you need?  Please email <a>rescue@westerndogs.org</a> with additional questions. 
+		p <img id='confusedDog' src='/images/confusedPup.jpg'> Don't see what you need?  Please email <a href = "mailto:testdogs@testdogs.com">rescue@westerndogs.org</a> with additional questions. 
