Making fields required

--- a/views/addDogs.jade
+++ b/views/addDogs.jade
@@ -17,31 +17,31 @@ block content
 			div.form-group
 				label(class= "col-sm-4 control-label" for="name") Name:
 				.col-sm-6
-					input(type="name" class="form-control" name= "name")
+					input(type="name" class="form-control" name= "name" required)
 			div.form-group
 				label(class= "col-sm-4 control-label" for="name") Age:
 				.col-sm-6
-					input(type="name" class="form-control" name="age")
+					input(type="name" class="form-control" name="age" required)
 			div.form-group
 				label(class= "col-sm-4 control-label" for="name") Breed:
 				.col-sm-6
-					input(type="name" class="form-control" name="breed")
+					input(type="name" class="form-control" name="breed" required)
 			div.form-group
 				label(class= "col-lg-4 control-label" for="name") Sex:
 				.col-sm-6
-					input(type="name" class="form-control" name="sex")
+					input(type="name" class="form-control" name="sex" required)
 			div.form-group
 				label(class= "col-lg-4 control-label" for="name") Foster home contact:
 				.col-sm-6
-					input(type="name" class="form-control" name="foster")
+					input(type="name" class="form-control" name="foster" required)
 			div.form-group
 				label(class= "col-sm-4 control-label" for="name") Biography:
 				.col-sm-6
-					input(type="name" class="form-control" name="biography")
+					input(type="name" class="form-control" name="biography" required)
 			div.form-group
 				label(class= "col-sm-4 control-label" for="name") Image(URL):
 				.col-sm-6
-					input(type="name" class="form-control" name="photo")
+					input(type="name" class="form-control" name="photo" required)
 				.form-group
 					.col-sm-offset-2.col-sm-10
 						button(type="submit" class="btn btn-default") Submit
